2013-02-11  Adenilson Cavalcanti  <cavalcantii@gmail.com>

        Build fix: r142549 broke EFL build
        https://bugs.webkit.org/show_bug.cgi?id=109527

        Reviewed by Kentaro Hara.

        Build fix.

        * CMakeLists.txt:

2013-02-11  Brent Fulgham  <bfulgham@webkit.org>

        Rename Visual Studio solution folders to avoid conflicts with project names
        https://bugs.webkit.org/show_bug.cgi?id=109484

        Reviewed by Tim Horton.

        * WebKit.vcxproj/WebKit.sln: Rename several solution folders (e.g.,
        WTF, WebCore, WebKit, JavaScriptCore) so that they do not conflict
        with projects using the same name.

2013-02-08  Benjamin Poulain  <bpoulain@apple.com>

        Move workerThreadCount from TestRunner to WebCore Internals
        https://bugs.webkit.org/show_bug.cgi?id=109239

        Reviewed by Darin Adler.

        * WebKit.xcodeproj/project.pbxproj:

2013-02-07  Roger Fong  <roger_fong@apple.com>

        Unreviewed. Corrections the exports definition file.

        * WebKit.vcxproj/WebKitExportGenerator/WebKitExports.def.in:

2013-02-07  Roger Fong  <roger_fong@apple.com>

        Unreviewed. More VS2010 WebKit solution touchups.
        Make WebKitExports.def.in be treated as a custom build file so that changes to it cause the exports to be rebuilt.

        * WebKit.vcxproj/WebKitExportGenerator/WebKitExportGenerator.vcxproj:
        * WebKit.vcxproj/WebKitExportGenerator/WebKitExportGenerator.vcxproj.filters:
        * WebKit.vcxproj/WebKitExportGenerator/WebKitExports.def.in:

2013-02-06  Roger Fong  <roger_fong@apple.com>

        Unreviewed. Touchups to VS2010 WebKit solution.
        Add WinLauncher projects to solution.

        * WebKit.vcxproj/WebKit.sln:

2013-02-05  Roger Fong  <roger_fong@apple.com>

        Unreviewed. Get rid of redundant exports in export definitions file.

        * WebKit.vcxproj/WebKitExportGenerator/WebKitExports.def.in:

2013-02-05  Brent Fulgham  <bfulgham@webkit.org>
